--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,7 @@
 # Gradle settings
 org.gradle.daemon=true
 
-# Manifest attributes
-vendorName=ICT^hothouse
-
-app.group=com.icthh.xm.lep
+app.group=com.icthh.xm
 app.name=xm-lep
 app.description=Logic Extension Point (LEP)
+app.vendor=ICT^hothouse
