--- a/gradle/lib-versions.gradle
+++ b/gradle/lib-versions.gradle
@@ -4,6 +4,8 @@ ext.versions = [
     propdepsPlugin: '0.0.9.RELEASE',
     sonarqube     : '2.5',
     checkstyle    : '7.6.1',
+    findbugs      : '3.0.1',
+    pmd           : '5.5.4',
 
     groovyAll     : '2.4.11',
 
