--- a/gradle/version.gradle
+++ b/gradle/version.gradle
@@ -1,53 +1,37 @@
+import java.util.regex.Pattern
 
-version = detectVersion()
+version = detectSemVersion()
+logger.lifecycle("Project  version: $version")
 
-logger.lifecycle("Project version: $version")
-
-int getNormalizedVersionPart(String name) {
-    hasProperty(name) ? Integer.parseInt((String) getProperty(name)) : 0
+String detectSemVersion() {
+    String semVersion = String.valueOf(project.version)
+    if (!SemVersion.valueOf(semVersion).isRelease()) {
+        semVersion += "-SNAPSHOT"
+    }
+    return semVersion
 }
 
-ProjectVersion detectVersion() {
-    int major = getNormalizedVersionPart('app.version.major')
-    int minor = getNormalizedVersionPart('app.version.minor')
-    int patch = getNormalizedVersionPart('app.version.patch')
+public class SemVersion {
 
-    // return version as result
-    new ProjectVersion(major, minor, patch, ProjectVersion.SNAPSHOT)
-}
+    private static final String NUMERIC_ID = "(?:0|[1-9]\\d*)"
+    private static final String MAIN_VERSION = "(" + NUMERIC_ID + ")\\.(" + NUMERIC_ID + ")\\.(" + NUMERIC_ID + ")"
 
-class ProjectVersion {
+    private static final Pattern MAIN_VERSION_REG = Pattern.compile(MAIN_VERSION);
 
-    public static final String SNAPSHOT = "SNAPSHOT"
+    private final String value
 
-    int major
-    int minor
-    int patch
-    String qualifier
-
-    ProjectVersion(int major, int minor, int patch) {
-        this(major, minor, patch, null)
+    public SemVersion(String value) {
+        this.value = value;
     }
 
-    ProjectVersion(int major, int minor, int patch, String qualifier) {
-        this.major = major
-        this.minor = minor
-        this.patch = patch
-        this.qualifier = qualifier
-    }
-
-    @Override
-    String toString() {
-        String version = "$major.$minor.$patch"
-        if (qualifier != null) {
-            version += "-$qualifier"
-        }
-        version
+    public static SemVersion valueOf(String value) {
+        return new SemVersion(value);
     }
 
     public boolean isRelease() {
-        String version = toString()
-        return !"0.0.0".equals(version) && !version.endsWith(SNAPSHOT)
+        return !"0.0.0".equals(value) && MAIN_VERSION_REG.matcher(value).matches();
     }
 
 }
+
+ext.SemVersion = SemVersion
