--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ org.gradle.daemon=true
 app.group=com.icthh.xm.lep
 app.name=xm-lep
 app.description=Logic Extension Point (LEP)
+app.version=0.2.0
 app.vendor=ICT^hothouse
