--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ allprojects {
     group = property('app.group')
 }
 
+apply from: rootProject.file('gradle/nexus-staging.gradle')
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
